# ReRoute.Ai-

./: .env.example  .gitignore  README.md  apis_free_list.txt  final_ppt_content.txt  final_ppt_submission.txt  pitch_deck_content.txt  problem.txt  solution.txt  travel_solution.txt
reroute-ai/backend/: README.md  about.txt  api_router.py  config.py  database.py  deps.py  main.py  pyproject.toml
reroute-ai/backend/agent/: about.txt  actions.py  graph_runner.py  policy.py  tools.py
reroute-ai/backend/alembic/: env.py
reroute-ai/backend/dao/: about.txt  disruption_event_dao.py  leg_dao.py  proposal_dao.py  refresh_token_dao.py  trip_dao.py  user_dao.py
reroute-ai/backend/integrations/: about.txt  duffel_client.py  flight_search.py  flight_status.py  maps_routes.py  resend_client.py  weather.py
reroute-ai/backend/migrations/: about.txt
reroute-ai/backend/model/: __init__.py  about.txt  disruption_event_model.py  itinerary_segment_model.py  leg_model.py  proposal_model.py  trip_model.py  user_model.py
reroute-ai/backend/routers/: about.txt  agent_router.py  auth_google_router.py  disruption_router.py  monitor_router.py  public_router.py  trip_router.py  user_router.py
reroute-ai/backend/schema/: about.txt  agent_schemas.py  disruption_schemas.py  itinerary_schemas.py  trip_schemas.py  user_schemas.py
reroute-ai/backend/scripts/: about.txt
reroute-ai/backend/service/: about.txt  agent_graph_service.py  agent_service.py  disruption_service.py  itinerary_service.py  monitor_cycle_service.py  monitor_service.py  proposal_service.py  ticket_extract_service.py  (+2 more)
(+125 files in other folders)
